--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ a:active
 
 .title,.section
 {
-	font-family: 'Kavoon', Georgia,serif;
+	font-family: 'Lobster';
 	font-size:28px;
 	text-shadow:0px 0px 4px #000;
 	color:#fff;
